--- a/index.html
+++ b/index.html
@@ -566,9 +566,8 @@
                 <div class="textwidget">
                   <p>Map where your photos were taken and discover local points of interest. Map where your photos.</p>
                   <p>
-                    Location: 12 London Avenue, Suite 18
-                    <br> E-mail: support@theme.com
-                    <br> Phone: 8 800 123 4567
+                    Location: Nygårdsgaten 4, 5015 Bergen
+                    <br> E-mail: info@audiobergen.no
                     <br>
                   </p>
                   <ul class="social-icons">
