--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     <!-- About end-->
 
     <!-- Testimonials-->
-    <section class="module parallax" data-background="assets/images/module-12.jpg" data-overlay="0.5">
+    <section class="module parallax" data-background="assets/images/module-12.jpg" data-overlay="0.5" id="services">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
