changed name to bergen audio and not audio bergen

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                   <p>Map where your photos were taken and discover local points of interest. Map where your photos.</p>
                   <p>
                     Location: Nygårdsgaten 4, 5015 Bergen
-                    <br> E-mail: info@audiobergen.no
+                    <br> E-mail: info@bergenaudio.no
                     <br>
                   </p>
                   <ul class="social-icons">
@@ -630,7 +630,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="copyright">
-                <p>© 2018 Audio Bergen, All Rights Reserved. Developed with love by
+                <p>© 2018 Bergen Audio, All Rights Reserved. Developed with love by
                   <a href="https://www.linkedin.com/in/obsaa/" target="_blank">Obsaa</a>
                 </p>
               </div>
