mv files to sub directory

--- a/folder/index.html
+++ b/folder/index.html
@@ -8,17 +8,17 @@
   <meta name="author" content="">
   <title>Bergen AUDIO</title>
   <!-- Favicons-->
-  <link rel="shortcut icon" href="folder/assets/images/favicon.png">
-  <link rel="apple-touch-icon" href="folder/assets/images/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="folder/assets/images/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="folder/assets/images/apple-touch-icon-114x114.png">
+  <link rel="shortcut icon" href="assets/images/favicon.png">
+  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
   <!-- Web Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600%7cPlayfair+Display:400i" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <!-- Plugins-->
-  <link href="folder/assets/css/plugins.min.css" rel="stylesheet">
+  <link href="assets/css/plugins.min.css" rel="stylesheet">
   <!-- Template core CSS-->
-  <link href="folder/assets/css/template.css" rel="stylesheet">
+  <link href="assets/css/template.css" rel="stylesheet">
 </head>
 
 <body>
@@ -37,15 +37,61 @@
   <!-- Header-->
   <header class="header header-transparent">
     <div class="container-fluid">
+      <!-- Brand-->
+      <div class="inner-header">
+        <a class="inner-brand" href="index.html">
+          <img src="assets/images/logo.png" alt="" width="200px">
+        </a>
+      </div>
       <!-- Navigation-->
       <div class="inner-navigation collapse">
         <div class="inner-nav onepage-nav">
           <ul>
-            <a class="inner-brand" href="index.html">
-              <img src="assets/images/logo.png" alt="" width="200px">
-            </a>
+            <li>
+              <a href="#home">
+                <span class="menu-item-span">Home</span>
+              </a>
+            </li>
+            <li>
+              <a href="#about">
+                <span class="menu-item-span">About</span>
+              </a>
+            </li>
+            <li>
+              <a href="#services">
+                <span class="menu-item-span">Services</span>
+              </a>
+            </li>
+            <li>
+              <a href="#team">
+                <span class="menu-item-span">Team</span>
+              </a>
+            </li>
+            <li>
+              <a href="#contact">
+                <span class="menu-item-span">Contact</span>
+              </a>
+            </li>
           </ul>
         </div>
+      </div>
+      <div class="extra-nav">
+        <ul>
+          <li>
+            <a class="off-canvas-open" href="#">
+              <span class="menu-item-span">
+                <i class="ti-menu"></i>
+              </span>
+            </a>
+          </li>
+          <li class="nav-toggle">
+            <a href="#" data-toggle="collapse" data-target=".inner-navigation">
+              <span class="menu-item-span">
+                <i class="ti-menu"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </header>
@@ -60,9 +106,13 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="m-b-20">
-              <strong>COMING SOON</strong>
+              <strong>We know the science of ears
+                <br> so you won't have to.</strong>
             </h1>
+            <p class="m-b-40">Learn how we can help improve your hearing
+              <br> think only about your music.</p>
             <p>
+              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#about">Learn More</a>
             </p>
           </div>
         </div>
@@ -70,8 +120,6 @@
     </section>
     <!-- Hero end-->
 
-<<<<<<< HEAD
-=======
     <!-- About-->
     <section class="module divider-bottom" id="about">
       <div class="container">
@@ -650,13 +698,13 @@
     <i class="fas fa-angle-up"></i>
   </a>
 
->>>>>>> dbb0d7cdd9f7216f0c58518c494d58315f1ac666
   <!-- Scripts-->
-  <script src="folder/assets/js/custom/jquery-3.2.1.min.js"></script>
-  <script src="folder/assets/js/custom/popper.min.js"></script>
-  <script src="folder/assets/js/bootstrap/bootstrap.min.js"></script>
-  <script src="folder/assets/js/custom/plugins.min.js"></script>
-  <script src="folder/assets/js/custom/custom.min.js"></script>
+  <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/custom/popper.min.js"></script>
+  <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
+  <script src="assets/js/custom/plugins.min.js"></script>
+  <script src="assets/js/custom/custom.min.js"></script>
 </body>
 
 </html>
