updated logo and on coming soon

--- a/index.html
+++ b/index.html
@@ -33,10 +33,15 @@
     </div>
   </div>
   <!-- Preloader end-->
-
+  
   <!-- Header-->
   <header class="header header-transparent">
     <div class="container-fluid">
+      <!-- Brand-->
+      <div class="inner-header">
+        <a class="inner-brand" href="index.html">
+        </a>
+      </div>
       <!-- Navigation-->
       <div class="inner-navigation collapse">
         <div class="inner-nav onepage-nav">
@@ -46,6 +51,24 @@
             </a>
           </ul>
         </div>
+      </div>
+      <div class="extra-nav">
+        <ul>
+          <li>
+            <a class="off-canvas-open" href="#">
+              <span class="menu-item-span">
+                <i class="ti-menu"></i>
+              </span>
+            </a>
+          </li>
+          <li class="nav-toggle">
+            <a href="#" data-toggle="collapse" data-target=".inner-navigation">
+              <span class="menu-item-span">
+                <i class="ti-menu"></i>
+              </span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
   </header>
