--- a/folder/index.html
+++ b/folder/index.html
@@ -106,13 +106,15 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="m-b-20">
-              <strong>We know the science of ears
-                <br> so you won't have to.</strong>
+                Velkommen til
+                <strong>
+                <br>Bergen AUDIO</strong>
             </h1>
-            <p class="m-b-40">Learn how we can help improve your hearing
-              <br> think only about your music.</p>
+            <p class="m-b-40">Ekspertise på lyd og hørsel
+              <br>Vår kunskap- Din tryghet.</p>
             <p>
-              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#about">Learn More</a>
+              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#servicebuds">ørepropper</a>
+              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#serciveaid">høreapparat</a>
             </p>
           </div>
         </div>
