--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <meta name="author" content="">
   <title>Bergen AUDIO</title>
   <!-- Favicons-->
-  <link rel="shortcut icon" href="folder/assets/images/favicon.png">
-  <link rel="apple-touch-icon" href="folder/assets/images/apple-touch-icon.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="folder/assets/images/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="folder/assets/images/apple-touch-icon-114x114.png">
+  <link rel="shortcut icon" href="assets/images/favicon.png">
+  <link rel="apple-touch-icon" href="assets/images/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="assets/images/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="assets/images/apple-touch-icon-114x114.png">
   <!-- Web Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600%7cPlayfair+Display:400i" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
   <!-- Plugins-->
-  <link href="folder/assets/css/plugins.min.css" rel="stylesheet">
+  <link href="assets/css/plugins.min.css" rel="stylesheet">
   <!-- Template core CSS-->
-  <link href="folder/assets/css/template.css" rel="stylesheet">
+  <link href="assets/css/template.css" rel="stylesheet">
 </head>
 
 <body>
@@ -33,22 +33,45 @@
     </div>
   </div>
   <!-- Preloader end-->
-  
+
   <!-- Header-->
   <header class="header header-transparent">
     <div class="container-fluid">
       <!-- Brand-->
       <div class="inner-header">
         <a class="inner-brand" href="index.html">
+          <img src="assets/images/logo.png" alt="" width="200px">
         </a>
       </div>
       <!-- Navigation-->
       <div class="inner-navigation collapse">
         <div class="inner-nav onepage-nav">
           <ul>
-            <a class="inner-brand" href="index.html">
-              <img src="folder/assets/images/logo.png" alt="" width="200px">
-            </a>
+            <li>
+              <a href="#home">
+                <span class="menu-item-span">Hjem</span>
+              </a>
+            </li>
+            <li>
+              <a href="#about">
+                <span class="menu-item-span">About</span>
+              </a>
+            </li>
+            <li>
+              <a href="#servicebuds">
+                <span class="menu-item-span">Services</span>
+              </a>
+            </li>
+            <li>
+              <a href="#team">
+                <span class="menu-item-span">Team</span>
+              </a>
+            </li>
+            <li>
+              <a href="#contact">
+                <span class="menu-item-span">Contact</span>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -83,9 +106,15 @@
         <div class="row">
           <div class="col-md-12">
             <h1 class="m-b-20">
-              <strong>COMING SOON</strong>
+                Velkommen til
+                <strong>
+                <br>Bergen AUDIO</strong>
             </h1>
+            <p class="m-b-40">Ekspertise på lyd og hørsel
+              <br>Vår kunskap- Din tryghet.</p>
             <p>
+              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#servicebuds">ørepropper</a>
+              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#serciveaid">høreapparat</a>
             </p>
           </div>
         </div>
@@ -93,12 +122,411 @@
     </section>
     <!-- Hero end-->
 
+    <!-- Testimonials-->
+    <section class="module parallax" data-background="assets/images/module-12.jpg" data-overlay=".5" id="servicebuds">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="space" data-MY="5px"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="review-slides owl-carousel">
+              <div class="review">
+                <div class="review-icons">
+                </div>
+                <div class="review-content">
+                  <blockquote>
+                    <h1>Du blir garantert
+                      <br/>fornøyd.</h1>
+                    <footer class="blockquote-footer">Saada</footer>
+                  </blockquote>
+                </div>
+              </div>
+              <div class="review">
+                <div class="review-content">
+                  <blockquote>
+                    <h1>Vi er de beste på hva
+                      <br/>vi gjør.</h1>
+                    <footer class="blockquote-footer">Magnus</footer>
+                  </blockquote>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="space" data-MY="50px"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Testimonials end-->
+
+    <!-- Clients-->
+    <section class="module bg-gray p-t-0 p-b-40">
+      <div class="container">
+        <div class="space" data-MY="-60px"></div>
+        <div class="row">
+          <div class="col-md-12 pricing-wrapper">
+            <div class="pricing-price">Høreapparat 
+            </div>
+          </div>
+          <div class="col-md-4 pricing-wrapper">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-slice"></i>
+              </div>
+              <div class="pricing-title">Nøyaktig</div>
+            </div>
+            <div class="pricing-price">Formstøpte
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+            </div>
+          </div>
+          <div class="col-md-4 pricing-wrapper pricing-popular">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-pin-alt"></i>
+              </div>
+              <div class="pricing-title">Korrekt</div>
+            </div>
+            <div class="pricing-price">
+              <span></span>In-ear Monitor
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+            </div>
+          </div>
+          <div class="col-md-4 pricing-wrapper pricing-popular">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-marker-alt"></i>
+              </div>
+              <div class="pricing-title">Profesjonell</div>
+            </div>
+            <div class="pricing-price">
+              <span></span>universell
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-4 pricing-wrapper">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-slice"></i>
+              </div>
+              <div class="pricing-title">Nøyaktig</div>
+            </div>
+            <div class="pricing-price">Formstøpte
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+            </div>
+          </div>
+          <div class="col-md-4 pricing-wrapper pricing-popular">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-pin-alt"></i>
+              </div>
+              <div class="pricing-title">Korrekt</div>
+            </div>
+            <div class="pricing-price">
+              <span></span>In-ear Monitor
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+            </div>
+          </div>
+          <div class="col-md-4 pricing-wrapper pricing-popular">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-marker-alt"></i>
+              </div>
+              <div class="pricing-title">Profesjonell</div>
+            </div>
+            <div class="pricing-price">
+              <span></span>universell
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Clients end-->
+
+    <!-- Team-->
+    <section class="module" id="team">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 m-auto text-center">
+            <h1>Our Managing Team.</h1>
+            <p class="lead">See how our users experience our service develped with our decade plus of experience in the industry.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="space" data-MY="60px"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-6 col-md-6">
+            <div class="team-item">
+              <div class="team-image">
+                <div class="team-wrap">
+                  <div class="team-content">
+                    <h6 class="team-name">Saada Mohamed</h6>
+                    <div class="team-role">Manager && Ear Specialist</div>
+                  </div>
+                  <div class="team-content-social">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-instagram"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-pinterest-p"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-md-6">
+            <div class="team-item">
+              <div class="team-image">
+                <div class="team-wrap">
+                  <div class="team-content">
+                    <h6 class="team-name">Magnus Hilland</h6>
+                    <div class="team-role">Otolaryngology, Pediatrics, Sports Medicine</div>
+                  </div>
+                  <div class="team-content-social">
+                    <ul>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-twitter"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-instagram"></i>
+                        </a>
+                      </li>
+                      <li>
+                        <a href="#">
+                          <i class="fab fa-pinterest-p"></i>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="space" data-MY="30px"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="text-center">
+              <a class="btn btn-circle btn-outline-brand" href="#">About Us</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Team end-->
+
+    <!-- Form-->
+    <section class="module divider-top" id="contact">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-6 col-md-9 m-auto text-center">
+            <h1>Let's talk.</h1>
+            <p class="lead">See how your users experience your website in realtime or view trends to see any changes in performance over
+              time.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="space" data-MY="60px"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-8 m-auto">
+
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Form end-->
+
+    <!-- Footer-->
+    <footer class="footer">
+      <div class="footer-widgets">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <!-- Text widget-->
+              <aside class="widget widget-text">
+                <div class="widget-title">
+                  <h6>About Us</h6>
+                </div>
+                <div class="textwidget">
+                  <p>For alle e-post og e-post formål, bruk adressen nedenfor.</p>
+                  <p>
+                    Location: Nygårdsgaten 4, 5015 Bergen
+                    <br> E-mail: info@bergenaudio.no
+                    <br>
+                  </p>
+                  <ul class="social-icons">
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-twitter"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-instagram"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-facebook-f"></i>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#">
+                        <i class="fab fa-pinterest-p"></i>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </aside>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer-bar">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="copyright">
+                <p>© 2018 Bergen Audio, All Rights Reserved. Developed with love by
+                  <a href="https://www.linkedin.com/in/obsaa/" target="_blank">Obsaa</a>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer end-->
+  </div>
+  <!-- Wrapper end-->
+  <!-- Off canvas-->
+  <div class="off-canvas-sidebar">
+    <div class="off-canvas-sidebar-wrapper">
+      <div class="off-canvas-header">
+        <a class="off-canvas-close" href="#">
+          <span class="ti-close"></span>
+        </a>
+      </div>
+      <div class="off-canvas-content">
+        <!-- Text widget-->
+        <aside class="widget widget-text">
+          <div class="textwidget">
+            <p class="text-center">
+              <img src="assets/images/logo-light-2.png" alt="" width="80px">
+            </p>
+            <p class="text-center">See how people enjoy using our product.</p>
+          </div>
+        </aside>
+        <!-- Recent portfolio widget-->
+        <aside class="widget widget-recent-works">
+          <ul>
+          </ul>
+        </aside>
+        <!-- Social Icons-->
+        <ul class="social-icons text-center">
+          <li>
+            <a href="#">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-facebook-f"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fab fa-pinterest-p"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <!-- Off canvas end-->
+
+  <!-- To top button-->
+  <a class="scroll-top" href="#top">
+    <i class="fas fa-angle-up"></i>
+  </a>
+
   <!-- Scripts-->
-  <script src="folder/assets/js/custom/jquery-3.2.1.min.js"></script>
-  <script src="folder/assets/js/custom/popper.min.js"></script>
-  <script src="folder/assets/js/bootstrap/bootstrap.min.js"></script>
-  <script src="folder/assets/js/custom/plugins.min.js"></script>
-  <script src="folder/assets/js/custom/custom.min.js"></script>
+  <script src="assets/js/custom/jquery-3.2.1.min.js"></script>
+  <script src="assets/js/custom/popper.min.js"></script>
+  <script src="assets/js/bootstrap/bootstrap.min.js"></script>
+  <script src="http://maps.googleapis.com/maps/api/js?key=AIzaSyA0rANX07hh6ASNKdBr4mZH0KZSqbHYc3Q"></script>
+  <script src="assets/js/custom/plugins.min.js"></script>
+  <script src="assets/js/custom/custom.min.js"></script>
 </body>
 
 </html>
