--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
         <div class="space" data-MY="-60px"></div>
         <div class="row">
           <div class="col-md-12 pricing-wrapper">
-            <div class="pricing-price">Høreapparat 
+            <div class="pricing-price">Ørepropper 
             </div>
           </div>
           <div class="col-md-4 pricing-wrapper">
