--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
               <div class="pricing-title">Profesjonell</div>
             </div>
             <div class="pricing-price">
-              <span></span>universell
+              <span></span>Universell
             </div>
             <div class="pricing-body">
               <p>.</p>
@@ -226,6 +226,10 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-md-12 pricing-wrapper">
+            <div class="pricing-price">Høreapparat 
+            </div>
+          </div>
           <div class="col-md-4 pricing-wrapper">
             <div class="pricing-header">
               <div class="pricing-icon">
