--- a/index.html
+++ b/index.html
@@ -230,14 +230,13 @@
             <div class="pricing-price">Høreapparat 
             </div>
           </div>
-          <div class="col-md-4 pricing-wrapper">
+          <div class="col-md-6 pricing-wrapper">
             <div class="pricing-header">
               <div class="pricing-icon">
-                <i class="ti-slice"></i>
               </div>
-              <div class="pricing-title">Nøyaktig</div>
+              <div class="pricing-title"></div>
             </div>
-            <div class="pricing-price">Formstøpte
+            <div class="pricing-price">Privat
             </div>
             <div class="pricing-body">
               <p>.</p>
@@ -246,32 +245,13 @@
               <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
             </div>
           </div>
-          <div class="col-md-4 pricing-wrapper pricing-popular">
+          <div class="col-md-6 pricing-wrapper pricing-popular">
             <div class="pricing-header">
               <div class="pricing-icon">
-                <i class="ti-pin-alt"></i>
               </div>
-              <div class="pricing-title">Korrekt</div>
             </div>
             <div class="pricing-price">
-              <span></span>In-ear Monitor
-            </div>
-            <div class="pricing-body">
-              <p>.</p>
-            </div>
-            <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
-            </div>
-          </div>
-          <div class="col-md-4 pricing-wrapper pricing-popular">
-            <div class="pricing-header">
-              <div class="pricing-icon">
-                <i class="ti-marker-alt"></i>
-              </div>
-              <div class="pricing-title">Profesjonell</div>
-            </div>
-            <div class="pricing-price">
-              <span></span>universell
+              <span></span>Sykehjem
             </div>
             <div class="pricing-body">
               <p>.</p>
