--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
       </div>
     </section>
     <!-- Hero end-->
+      
+    <section class="module divider-bottom" id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 m-auto text-center">
+            <h1>Experience Great Service</h1>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Testimonials-->
     <section class="module parallax" data-background="assets/images/module-12.jpg" data-overlay=".5" id="servicebuds">
