--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6 m-auto text-center">
-            <h1>Experience Great Service</h1>
+            <h1>Opplev God service</h1>
           </div>
         </div>
       </div>
