--- a/index.html
+++ b/index.html
@@ -175,9 +175,21 @@
       <div class="container">
         <div class="space" data-MY="-60px"></div>
         <div class="row">
-          <div class="col-md-12 pricing-wrapper">
-            <div class="pricing-price">Ørepropper 
+          <div class="container">
+          <div class="row">
+            <div class="col-md-12 pricing-wrapper">
+
             </div>
+            <div class="col-md-12 pricing-wrapper">
+
+            </div>
+            <div class="col-md-12 pricing-wrapper">
+
+            </div>
+            <div class="col-md-6 m-auto text-center">
+              <h1>Ørepropper</h1>
+            </div>
+          </div>
           </div>
           <div class="col-md-4 pricing-wrapper">
             <div class="pricing-header">
@@ -230,11 +242,18 @@
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-12 pricing-wrapper">
-            <div class="pricing-price">Høreapparat 
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 pricing-wrapper">
+              <div class="pricing-price"> 
+              </div>
             </div>
-          </div>
+          <div class="col-md-6 m-auto text-center">
+          <h1>Høreapparat</h1>
+        </div>
+           </div>
+        </div>
+        <div class="row">
           <div class="col-md-6 pricing-wrapper">
             <div class="pricing-header">
               <div class="pricing-icon">
