--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </section>
 
     <!-- Testimonials-->
-    <section class="module parallax" data-background="assets/images/module-12.jpg" data-overlay=".5" id="servicebuds">
+    <section class="module parallax" data-background="assets/images/module-12.jpg" data-overlay=".5" >
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -171,7 +171,7 @@
     <!-- Testimonials end-->
 
     <!-- Clients-->
-    <section class="module bg-gray p-t-0 p-b-40">
+    <section class="module bg-gray p-t-0 p-b-40" id="servicebuds">
       <div class="container">
         <div class="space" data-MY="-60px"></div>
         <div class="row">
@@ -242,7 +242,7 @@
             </div>
           </div>
         </div>
-        <div class="container">
+        <div class="container" id="serviceaid">
           <div class="row">
             <div class="col-md-12 pricing-wrapper">
               <div class="pricing-price"> 
