--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <p>.</p>
             </div>
             <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
             </div>
           </div>
           <div class="col-md-4 pricing-wrapper pricing-popular">
@@ -178,7 +178,7 @@
               <p>.</p>
             </div>
             <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
             </div>
           </div>
           <div class="col-md-4 pricing-wrapper pricing-popular">
@@ -195,7 +195,7 @@
               <p>.</p>
             </div>
             <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
             </div>
           </div>
         </div>
@@ -223,7 +223,7 @@
               <p>.</p>
             </div>
             <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
             </div>
           </div>
           <div class="col-md-6 pricing-wrapper pricing-popular">
@@ -238,7 +238,7 @@
               <p>.</p>
             </div>
             <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Contact Us</a>
+              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
             </div>
           </div>
         </div>
