--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </li>
             <li>
               <a href="#contact">
-                <span class="menu-item-span">Contact</span>
+                <span class="menu-item-span">KONTAKT</span>
               </a>
             </li>
           </ul>
