--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </li>
             <li>
               <a href="#about">
-                <span class="menu-item-span">Services</span>
+                <span class="menu-item-span">Tjenester</span>
               </a>
             </li>
             <li>
@@ -246,15 +246,27 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-md-9 m-auto text-center">
-            <h1>Let's talk.</h1>
-            <p class="lead">See how your users experience your website in realtime or view trends to see any changes in performance over
-              time.
+            <h1>La oss snakke!</h1>
+            <p class="lead">
             </p>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-12">
-            <div class="space" data-MY="60px"></div>
+          <div class="col-md-6 pricing-wrapper">
+            <div class="pricing-header">
+              <div class="pricing-icon">
+                <i class="ti-slice"></i>
+              </div>
+              <div class="pricing-title">Nøyaktig</div>
+            </div>
+            <div class="pricing-price">Ring Oss å
+            </div>
+            <div class="pricing-body">
+              <p>.</p>
+            </div>
+            <div class="pricing-footer">
+              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
+            </div>
           </div>
         </div>
         <div class="row">
