--- a/index.html
+++ b/index.html
@@ -252,20 +252,20 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 pricing-wrapper">
+          <div class="col-md-12 pricing-wrapper">
             <div class="pricing-header">
               <div class="pricing-icon">
-                <i class="ti-slice"></i>
+                <i class="ti-email"></i>
               </div>
-              <div class="pricing-title">Nøyaktig</div>
+              <div class="pricing-title">SEND OSS EN E-POST</div>
             </div>
-            <div class="pricing-price">Ring Oss å
+            <div class="pricing-price">
             </div>
             <div class="pricing-body">
               <p>.</p>
             </div>
             <div class="pricing-footer">
-              <a class="btn btn-circle btn-brand" href="#contact">Kontakt Oss</a>
+              <a class="btn btn-circle btn-brand" href="mailto:info@bergenaudio.no">INFO@BERGENAUDIO.NO</a>
             </div>
           </div>
         </div>
@@ -356,7 +356,7 @@
             <p class="text-center">
               <img src="assets/images/logo-light-2.png" alt="" width="80px">
             </p>
-            <p class="text-center">See how people enjoy using our product.</p>
+            <p class="text-center">Se hvordan folk nyter å bruke våre produkter.</p>
           </div>
         </aside>
         <!-- Recent portfolio widget-->
