--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
               <!-- Text widget-->
               <aside class="widget widget-text">
                 <div class="widget-title">
-                  <h6>About Us</h6>
+                  <h6>Omkring Oss</h6>
                 </div>
                 <div class="textwidget">
                   <p>For alle e-post og e-post formål, bruk adressen nedenfor.</p>
