--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="copyright">
-                <p>© 2018 Bergen Audio, All Rights Reserved. Developed with love by
+                <p>© 2018 Bergen Audio, All Rights Reserved. Denne nettsiden er bygget av 
                   <a href="https://www.linkedin.com/in/obsaa/" target="_blank">Obsaa</a>
                 </p>
               </div>
