--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <br>Vår kunskap- Din tryghet.</p>
             <p>
               <a class="btn btn-lg btn-circle btn-outline-new-white" href="#servicebuds">ørepropper</a>
-              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#serciveaid">høreapparat</a>
+              <a class="btn btn-lg btn-circle btn-outline-new-white" href="#serviceaid">høreapparat</a>
             </p>
           </div>
         </div>
